--- a/frontend/src/views/feed/_style.scss
+++ b/frontend/src/views/feed/_style.scss
@@ -2,8 +2,8 @@
 
 
 .views--feed__container {
-    border-inline-start: 1px solid getColor('seperator');
-    
+    border-inline-start: 1px solid getColor("seperator");
+
     div {
         max-width: max-content;
         margin: 0 auto;
