--- a/frontend/src/styles/mixin/_viewport.scss
+++ b/frontend/src/styles/mixin/_viewport.scss
@@ -1,12 +1,12 @@
 @mixin viewport-wide-range($minDeviceWide, $maxDeviceWide, $isInclusive: true) {
     @if ($isInclusive) {
-        @media only screen and (max-width: calc(#{$maxDeviceWide} + 1px)) and (min-width: calc(#{$minDeviceWide} + 1px)) {
+        @media only screen and (max-width: #{$maxDeviceWide + 1}px) and (min-width: #{$minDeviceWide + 1}px) {
             @content;
         }
     }
 
     @else {
-        @media only screen and (max-width: $maxDeviceWide) and (min-width: $minDeviceWide) {
+        @media only screen and (max-width: #{$maxDeviceWide}px) and (min-width: #{$minDeviceWide}px) {
             @content;
         }
     }
@@ -15,29 +15,31 @@
 
 @mixin viewport-wide-up-to($maxDeviceWide, $isInclusive: true) {
     @if ($isInclusive) {
-        @media only screen and (max-width: calc(#{$maxDeviceWide} + 1px)) {
+        @media only screen and (max-width: #{$maxDeviceWide - 1}px) {
             @content;
         }
 
     }
 
     @else {
-        @media only screen and (max-width: $maxDeviceWide) {
+        @media only screen and (max-width: #{$maxDeviceWide}px) {
             @content;
         }
     }
 }
 
+
 @mixin viewport-wide-start-from($minDeviceWide, $isInclusive: true) {
     @if ($isInclusive) {
-        @media only screen and (min-width: calc(#{$minDeviceWide} + 1px)) {
+        @debug $isInclusive;
+
+        @media only screen and (min-width: #{$minDeviceWide + 1}px) {
             @content;
         }
-
     }
 
     @else {
-        @media only screen and (min-width: $minDeviceWide) {
+        @media only screen and (min-width: #{$minDeviceWide}px) {
             @content;
         }
     }
