--- a/frontend/src/_app.scss
+++ b/frontend/src/_app.scss
@@ -2,8 +2,10 @@
 @import './styles/variable/import';
 
 .app-layout__container {
-    display: grid;
-    grid-template-columns: 72px 1fr;
+    @include viewport-wide-start-from(getViewport("small"), false) {
+        display: grid;
+        grid-template-columns: 72px 1fr;
+    }
 
     @include viewport-wide-start-from(getViewport("large"), false) {
         grid-template-columns: 244px 1fr;
