--- a/frontend/src/styles/variable/_color.scss
+++ b/frontend/src/styles/variable/_color.scss
@@ -2,7 +2,10 @@
 
 
 $color: (
-    "seperator": #dbdbdb
+    "seperator": #dbdbdb,
+    "secondary-text": #737373,
+    "primary-button": #0095f6,
+    "primary-link": #00379d
 );
 
 
