--- a/frontend/src/styles/basic/_base.scss
+++ b/frontend/src/styles/basic/_base.scss
@@ -4,8 +4,6 @@
 
 html {
     scroll-behavior: smooth;
-}
-
-body {
     font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
