--- a/frontend/src/views/feed/_style.scss
+++ b/frontend/src/views/feed/_style.scss
@@ -3,17 +3,16 @@
 
 
 .views--feed__container {
-    @include viewport-wide-up-to(getViewport("small")) {
-        border-block-end: 1px solid getColor("seperator");
-        height: calc(100vh - 49px);
-    }
-
     @include viewport-wide-start-from(getViewport("small"), false) {
         border-inline-start: 1px solid getColor("seperator");
     }
 
-    div {
-        max-width: max-content;
-        margin: 0 auto;
+    .centerize {
+        display: flex;
+        justify-content: space-between;
+
+        padding-inline: .25rem;
+        margin: 3.5rem auto 0;
+        max-width: 73rem;
     }
 }
