[code] Implement basic feed side content

--- a/frontend/src/cmps/feed/aside-content/suggestions/suggestion-preview/style.scss
+++ b/frontend/src/cmps/feed/aside-content/suggestions/suggestion-preview/style.scss
@@ -1,5 +1,5 @@
-@import "../../../../styles/mixin/import";
-@import "../../../../styles/function/import";
+@import "../../../../../styles/mixin/import";
+@import "../../../../../styles/function/import";
 
 
 .feed--suggestion-preview__container {
