--- a/frontend/src/cmps/feed/aside-content/suggestions/suggestion-list/style.scss
+++ b/frontend/src/cmps/feed/aside-content/suggestions/suggestion-list/style.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/variable/import';
-@import '../../../../styles/function/import';
+@import '../../../../../styles/variable/import';
+@import '../../../../../styles/function/import';
 
 
 .feed--suggestion-list__container {
