--- a/frontend/src/cmps/feed/aside-content/user-indicator/style.scss
+++ b/frontend/src/cmps/feed/aside-content/user-indicator/style.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/mixin/import";
-@import "../../../styles/function/import";
+@import "../../../../styles/mixin/import";
+@import "../../../../styles/function/import";
 
 
 .feed--user-indicator__container {
