--- a/frontend/src/styles/variable/_color.scss
+++ b/frontend/src/styles/variable/_color.scss
@@ -4,8 +4,10 @@
 $color: (
     "seperator": #dbdbdb,
     "secondary-text": #737373,
+    "icon-hover": #8e8e8e,
     "primary-button": #0095f6,
-    "primary-link": #00379d
+    "primary-link": #00379d,
+    'primary-red': #ff3040
 );
 
 
