--- a/frontend/src/stories/app-layout/navigation-link/style.scss
+++ b/frontend/src/stories/app-layout/navigation-link/style.scss
@@ -93,7 +93,7 @@
             border-radius: .5em;
             font-size: 14px;
             padding: .4em .8em;
-            box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.0975);
+            box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.0975);
             transform: translateY(-50%) scale(0);
             transition: transform ease-in .3s;
             transition-delay: 1s;
