--- a/frontend/src/_app.scss
+++ b/frontend/src/_app.scss
@@ -1,5 +1,5 @@
-@import './styles/mixin/import';
-@import './styles/variable/import';
+@import '/src/styles/mixin/import';
+@import '/src/styles/variable/import';
 
 .app-layout__container {
     @include viewport-wide-start-from(getViewport("small"), false) {
