--- a/frontend/src/cmps/feed/main-content/share-preview/style.scss
+++ b/frontend/src/cmps/feed/main-content/share-preview/style.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/variable/import';
-@import '../../../../styles/function/import';
+@import '/src/styles/variable/import';
+@import '/src/styles/function/import';
 
 
 .feed--share-preview__container {
