--- a/frontend/src/views/feed/_style.scss
+++ b/frontend/src/views/feed/_style.scss
@@ -10,9 +10,12 @@
     .centerize {
         display: flex;
         justify-content: space-between;
-
-        margin: 3.5rem auto 0;
+        margin: 16px auto 0;
         max-width: 73rem;
+
+        @include viewport-wide-start-from(getViewport("small"), false) {
+            margin: 3.5rem auto 0;
+        }
 
         @include viewport-wide-up-to(getViewport("medium"), false) {
             justify-content: center;
