--- a/frontend/src/stories/app-layout/navigation-link/style.scss
+++ b/frontend/src/stories/app-layout/navigation-link/style.scss
@@ -41,7 +41,7 @@
     &.with-image {
         a {
             &.active img {
-                // Should get replaced with :has selector when Firefox will suppoer it
+                // Should get replaced with :has selector when Firefox will support it
                 border: 2px solid black;
             }
 
