[code] Seperate moment-preview to small cmps

--- a/frontend/src/cmps/feed/aside-content/suggestions/suggestion-list/style.scss
+++ b/frontend/src/cmps/feed/aside-content/suggestions/suggestion-list/style.scss
@@ -23,6 +23,10 @@
             line-height: getSizeInEm(16px);
             text-decoration: none;
             letter-spacing: .5px;
+
+            &:hover {
+                color: #808080;
+            }
         }
     }
 
